--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0"
 clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
 ctrlc = "3.2"
 libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs", branch = "master" }
+netns-rs = "0.1.0"
 nix = "0.24"
 
 [build-dependencies]
